--- a/styles/style.css
+++ b/styles/style.css
@@ -1,14 +1,26 @@
+/* ESTRUCTURA GRID */
 .game {
     display: grid;
-    width: 50%;
+ 
     grid-template-columns: auto auto auto;
+    width: 50%;
+    height: 400px;
     background-color: #000000;
-    padding: 10px;
+
   }
   .grid-item {
-    background-color: rgba(255, 255, 255, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(176, 123, 123, 0.8);
     border: 1px solid rgba(0, 0, 0, 0.8);
-    padding: 20px;
+ height: 100%;
+ width: 100%;
     font-size: 30px;
     text-align: center;
   }
+/* BOTON TIPO CELDA */
+.cell-button{
+    width: 100%;
+    height: 100%;
+}
