--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,33 @@
+body{
+display: flex;
+justify-content: center;
+padding: 70px;
+
+
+background-image: url("/img/background-image-reverse-3000px.jpg");
+
+background-size: cover;
+background-repeat: no-repeat;
+padding: 40px;
+}
+
+h1{
+  font-family: "Bebas Neue", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 150px;
+  color: rgb(225, 211, 211);
+
+}
+
+
+
+
+/* 
+RESPONSIVIDAD */
+
+
+
 /* ESTRUCTURA GRID */
 .game {
     display: grid;
@@ -5,22 +35,38 @@
     grid-template-columns: auto auto auto;
     width: 50%;
     height: 400px;
-    background-color: #000000;
+background-color: transparent;
+    margin-left: 20px;
 
   }
   .grid-item {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(176, 123, 123, 0.8);
+   background-color: transparent;
     border: 1px solid rgba(0, 0, 0, 0.8);
  height: 100%;
  width: 100%;
     font-size: 30px;
     text-align: center;
   }
+
+
+
+
+
 /* BOTON TIPO CELDA */
 .cell-button{
     width: 100%;
     height: 100%;
+opacity: 0;
 }
+
+
+/* BOTON TIPO CELDA */
+.cell-button:hover{
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+}
+
