--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,7 @@
+
+*{
+  margin: 0px;
+}
 body{
 display: flex;
 justify-content: center;
@@ -6,7 +10,8 @@ padding: 70px;
 
 background-image: url("/img/background-image-reverse-3000px.jpg");
 
-background-size: cover;
+/* background-size: cover; */
+background-size: 1428px 740px;
 background-repeat: no-repeat;
 padding: 40px;
 }
@@ -44,7 +49,7 @@ background-color: transparent;
     justify-content: center;
     align-items: center;
    background-color: transparent;
-    border: 1px solid rgba(0, 0, 0, 0.8);
+    border: 1px solid rgba(255, 255, 255, 0.8);
  height: 100%;
  width: 100%;
     font-size: 30px;
