--- a/src/styles/game.css
+++ b/src/styles/game.css
@@ -6,24 +6,32 @@
 }
 
 
-nav{
-  width: 100%;
-height: 100px;
-background-color: rgb(229, 0, 0);
-opacity: 0.4;
+.container{
+  display: flex;
+  justify-content:space-evenly;
+  align-items: end;
 position: fixed;
+width: 100%;
+height: 70px;
+background-color: transparent;
+/* background-color: red;
+opacity: 0.4; */
+
+
+}
+
+.buttons-container{
+width: 100%;
+height: 50px;
+/* background-color: black; */
+
 
 }
 
 
 
 
-nav h1{
-  z-index: 1;
-  color: white;
-  font-size: 60px;
-  z-index: 20;
-}
+
 main{
   background-color: rgb(70, 44, 10);
   height: 575px;
@@ -44,7 +52,7 @@ main{
 
   .contenido{
 top: 12vh;
-background-color: rgb(251, 251, 251);
+background-color: rgb(145, 202, 0);
   }
 
 
@@ -78,7 +86,8 @@ background-color: rgb(251, 251, 251);
     background-color: aquamarine; */
     width: 100%;
     height: 100px;
-    background-color: rgb(229, 0, 0);
+    background-color: rgb(34, 229, 0);
+    margin-top: 20px;
     opacity: 0.4;
     position: fixed;
   }
