--- a/src/styles/game.css
+++ b/src/styles/game.css
@@ -1,93 +1,45 @@
-*{
+* {
   margin: 0;
   box-sizing: border-box;
   list-style: none;
   text-decoration: none;
 }
 
-
-.container{
+.container {
   display: flex;
-  justify-content:space-evenly;
+  justify-content: space-evenly;
   align-items: end;
-position: fixed;
-width: 100%;
-height: 70px;
-background-color: transparent;
-/* background-color: red;
-opacity: 0.4; */
-
-
+  position: fixed;
+  width: 100%;
+  height: 70px;
+  background-color: transparent;
 }
 
-.buttons-container{
-width: 100%;
-height: 50px;
-/* background-color: black; */
-
-
+.buttons-container {
+  width: 100%;
+  height: 50px;
 }
 
-
-
-
-
-main{
-  background-color: rgb(70, 44, 10);
-  height: 575px;
+#main {
+  height: 580px;
   width: 100%;
 
-  /* background-color: aqua; */
-  background-image: url("/src/img/mv.webp");
   background-size: cover;
-  /* background-repeat: no-repeat; */
-   background-position: center ; 
-   /* La imagen se centrará dentro del div  */
+  background-position: center;
 
+}
 
+.contenido {
+  background-color: rgb(145, 202, 0);
+}
 
-  }
+.contenido p {
+  color: aliceblue;
+}
 
-
-
-  .contenido{
-top: 12vh;
-background-color: rgb(145, 202, 0);
-  }
-
-
-  .contenido p{
-    color: aliceblue;
-  }
-/*
-
-  nav h1 {
-    font-size: 40px;
-    color: white;
-  } */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  footer{
-/* 
-    width: 100%;
-    height: 100px;
-    background-color: aquamarine; */
-    width: 100%;
-    height: 100px;
-    background-color: rgb(34, 229, 0);
-    margin-top: 20px;
-    opacity: 0.4;
-    position: fixed;
-  }
+footer {
+  width: 100%;
+  height: 120px;
+  background-color: transparent;
+  opacity: 0.4;
+}
