--- a/src/styles/game.css
+++ b/src/styles/game.css
@@ -7,18 +7,37 @@
 
 .container {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: end;
   position: fixed;
   width: 100%;
-  height: 70px;
-  background-color: transparent;
+  height: 150px;
+  /* background-color: transparent; */
+  /* background-color: aquamarine;
+  opacity: 0.4; */
 }
 
+
 .buttons-container {
+
   width: 100%;
   height: 50px;
+  
 }
+
+#mode-1{
+  height: 30px;
+  width: 180px;
+  background-color: red;
+  margin-right: 50px;
+}
+#mode-2{
+  height: 30px;
+  width: 180px;
+  background-color: red;
+  margin-left: 50px;
+}
+
 
 #main {
   height: 580px;
@@ -30,16 +49,16 @@
 }
 
 .contenido {
-  background-color: rgb(145, 202, 0);
+  background-color: rgb(190, 205, 153);
 }
 
 .contenido p {
   color: aliceblue;
 }
-
+/* 
 footer {
   width: 100%;
   height: 120px;
   background-color: transparent;
   opacity: 0.4;
-}
+} */
