--- a/src/styles/game.css
+++ b/src/styles/game.css
@@ -44,8 +44,9 @@
   width: 100%;
 
   background-size: cover;
+  /* background-repeat: no-repeat; */
   background-position: center;
-
+ 
 }
 
 .contenido {
