--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -34,7 +34,7 @@ header{
     /* font-family: "Roboto", sans-serif;
     font-weight: 700;
     font-style: normal; */
-    font-family: 'Stranger Things', sans-serif;
+    /* font-family: 'Stranger Things', sans-serif; */
                                                 
     color: var(--blanco);
     font-size: 50px;
