--- a/src/styles/human-machine.css
+++ b/src/styles/human-machine.css
@@ -1,3 +1,21 @@
 body{
     background-color: brown;
 }
+
+.div-container{
+    display: grid;
+    width: 50%;
+    height: 500px;
+    grid-template-columns: auto auto auto;
+    background-color: #2196F3;
+ 
+}
+
+.cellButton{
+    background-color: rgba(255, 255, 255, 0.8);
+    border: 1px solid rgba(0, 0, 0, 0.8);
+   width: 100%;
+   height: 100%;
+    font-size: 30px;
+    text-align: center;
+}
