--- a/src/styles/human-machine.css
+++ b/src/styles/human-machine.css
@@ -7,20 +7,21 @@ body{
 
 .div-container{
     display: grid;
-    width: 50%;
+    justify-content: center;
+    width: 70%;
     height: 400px;
     grid-template-columns: auto auto auto;
     background-color: #2196F3;
-    /* padding: 10px; */
+    padding: 10px;
 }
 
+
 .cellButton{
-    background-color: rgba(255, 255, 255, 0.8);
-    border: 1px solid rgba(0, 0, 0, 0.8);
-    height: 100%;
-    width: 100%;
-    
-    /* padding: 20px; */
-    font-size: 30px;
-    text-align: center;
+    margin: 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 400px;
+    width: 400px;
+
 }
