--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -31,11 +31,10 @@ header{
    
     color: rgb(255, 255, 255);
     /* FUENTE DE GOOGLE */
-    /* font-family: "Roboto", sans-serif;
+   font-family: "Roboto", sans-serif;
     font-weight: 700;
-    font-style: normal; */
-    /* font-family: 'Stranger Things', sans-serif; */
-                                                
+    font-style: normal; 
+    font-family: 'Stranger Things', sans-serif; 
     color: var(--blanco);
     font-size: 50px;
 }
