--- a/src/styles/human-machine.css
+++ b/src/styles/human-machine.css
@@ -1,3 +1,62 @@
+*{
+    margin: 0;
+}
+
+body{
+    background-color: blue;
+    background-image: url("/src/img/dbsenye-f8ded3ef-979c-402f-8dae-07b34738bd94.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+
+.usher{
+    width: 100%;
+    height: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+.div-container {
+    display: grid;
+
+    grid-template-columns: auto auto auto;
+    justify-content: center;
+    align-items: center;
+  /* background-color: blue; */
+  /* background-color: rgb(0, 0, 0); */
+  background-image: url("/src/img/stranger-things-easter-eggs-3.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+    width: 450px;
+    height: 450px;
+    padding: 10px;
+  }
+  .cellButton{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 153px;
+    height: 150px;
+    background-color: #204187;
+    opacity: 0.4;
+    border: 1px solid rgba(0, 0, 0, 0.8);
+    padding: 20px;
+    font-size: 30px;
+    text-align: center;
+  }
+
+
+
+
+
+
+
+
+
+
+/* 
 body{
     background-color: brown;
     display: flex;
@@ -24,4 +83,4 @@ body{
     height: 400px;
     width: 400px;
 
-}
+} */
