--- a/src/styles/human-machine.css
+++ b/src/styles/human-machine.css
@@ -9,7 +9,6 @@ body{
     background-repeat: no-repeat;
 }
 
-
 .usher{
     width: 100%;
     height: 500px;
@@ -17,70 +16,47 @@ body{
     justify-content: center;
     align-items: center;
 
+    width: 100%;
+    height: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
-.div-container {
+.game {
     display: grid;
 
     grid-template-columns: auto auto auto;
+  /* background-color: blue; */
+  width: 450px;
+  height: 450px;
+  padding: 10px;
+
+
+
+  
+  }
+  .demoButtons{
+    display: flex;
     justify-content: center;
     align-items: center;
-  /* background-color: blue; */
-  /* background-color: rgb(0, 0, 0); */
-  background-image: url("/src/img/stranger-things-easter-eggs-3.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-    width: 450px;
-    height: 450px;
-    padding: 10px;
-  }
-  .cellButton{
+    width: 150px;
+    height: 150px;
+    background-color: rgba(255, 255, 255, 0.8);
+    border: 1px solid rgba(0, 0, 0, 0.8);
+    padding: 20px;
+    font-size: 30px;
+    text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 153px;
     height: 150px;
-    background-color: #204187;
-    opacity: 0.4;
+
     border: 1px solid rgba(0, 0, 0, 0.8);
     padding: 20px;
     font-size: 30px;
     text-align: center;
+    color: white;
   }
 
-
-
-
-
-
-
-
-
-
-/* 
-body{
-    background-color: brown;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.div-container{
-    display: grid;
-    justify-content: center;
-    width: 70%;
-    height: 400px;
-    grid-template-columns: auto auto auto;
-    background-color: #2196F3;
-    padding: 10px;
-}
-
-
-.cellButton{
-    margin: 4px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 400px;
-    width: 400px;
-
-} */
