--- a/src/styles/human-machine.css
+++ b/src/styles/human-machine.css
@@ -31,6 +31,7 @@ body{
   width: 450px;
   height: 450px;
   padding: 10px;
+
   
   }
   .demoButtons{
@@ -55,5 +56,10 @@ body{
     font-size: 30px;
     text-align: center;
     color: white;
+          /* FUENTE DE GOOGLE */
+          font-family: "Roboto", sans-serif;
+          font-weight: 700;
+          font-style: normal; 
+          font-family: 'Stranger Things', sans-serif; 
   }
 
