--- a/src/styles/human-machine.css
+++ b/src/styles/human-machine.css
@@ -1,12 +1,30 @@
+
 *{
     margin: 0;
 }
+
+html {
+    font-size: 62.5%;
+}
+
+body {
+    
+   
+    font-size: 16px;  /* 1rem = 10px */
+}
+
+
 
 body{
     background-color: blue;
     background-image: url("/src/img/dbsenye-f8ded3ef-979c-402f-8dae-07b34738bd94.jpg");
     background-size: cover;
     background-repeat: no-repeat;
+        /* FUENTE DE GOOGLE */
+        font-family: "Roboto", sans-serif;
+        font-weight: 700;
+        font-style: normal; 
+        font-family: 'Stranger Things', sans-serif; 
 }
 
 .usher{
@@ -21,6 +39,217 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+
+}
+header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 40px;
+    background-color: red;
+
+}
+
+main{
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 55rem;
+  
+
+}
+
+.first-section{
+    display: flex;
+    justify-content: center;
+    align-items: end;
+width: 25%;
+height: 100%;
+
+
+
+}
+
+
+
+.reproductor-container{
+    padding: 10px;
+    width: 65%;
+    height: 15rem;
+    background-color: #9a9993;
+    border-radius: 10px;
+}
+
+.reproductor-buttons{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    height: 30%;
+    background-color: #9a9993;
+}
+.reproductor-border{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 4rem;
+    width: 20rem;
+background-color: #c7c7c4;
+border: 4px solid rgb(138, 71, 205);
+margin-bottom: 6px;
+
+}
+
+#play-button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+background-color: #dc3545;
+width: 5rem;
+height: 3rem;
+border-radius: 4px;
+margin: 1px;
+}
+#play-button:hover{
+    background-color: #c62938;
+    width: 5rem;
+    height: 3rem;
+    border-radius: 4px;
+    margin: 1px;
+    }
+#next-button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #28a745;
+    width: 5rem;
+    height: 3rem;
+border-radius: 4px;
+margin: 1px;
+}
+#next-button:hover{
+    background-color: #1ea03c;
+    width: 5rem;
+    height: 3rem;
+border-radius: 4px;
+margin: 1px;
+}
+#pause-button{
+    background-color: #ffc107;
+    width: 5rem;
+    height: 3rem;
+border-radius: 4px;
+margin: 1px;
+}
+#pause-button:hover{
+    background-color: #e0ab0a;
+    width: 5rem;
+    height: 3rem;
+border-radius: 4px;
+margin: 1px;
+}
+
+.reproductor-body{
+    display: flex;
+
+    width: 100%;
+    height: 60%;
+    background-color: rgb(233, 168, 82);
+}
+
+.reprodutor-grabador{
+   display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background-color: #9a9993;
+}
+
+.reproductor-parlante{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    border: 4px solid black;
+    background-color: #9a9993;
+}
+
+.grabador{
+    height: 8rem;
+    width: 8rem;
+    background-color: rgb(0, 0, 0);
+    border: 3px solid #e3e4e5 ;
+    border-radius: 50%;
+}
+.circulo{
+    height: 60%;
+    width: 60%;
+    background-color: #202522;
+    border: 4px solid rgb(0, 0, 0);
+}
+
+.second-section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    height: 100%;
+ 
+}
+
+
+.third-section{
+
+    width: 25%;
+    height: 100%;
+
+    
+    
+    }
+
+    .first-block{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 50%;
+   
+    }
+    
+.first-block{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 50%;
+    background-color: green;
+}
+
+.reset-button-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #c62938;
+}
+.second-block{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 50%;
+    background-color: rgb(128, 124, 0);
+}
+
+.exit-button-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: blue;
 
 }
 .game {
