--- a/src/styles/human-human.css
+++ b/src/styles/human-human.css
@@ -43,8 +43,9 @@ header{
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 40px;
-    background-color: red;
+    height: 50px;
+    color: yellow;
+    /* background-color: red; */
 
 }
 
@@ -198,7 +199,7 @@ margin: 1px;
 
 width: 25%;
 height: 100%;
-background-color: #f9410e;
+/* background-color: #f9410e; */
 
 
 }
@@ -209,31 +210,90 @@ background-color: #f9410e;
     align-items: center;
     width: 100%;
     height: 50%;
-    background-color: green;
+    /* background-color: green; */
 }
 
 .reset-button-container{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #c62938;
+
+    /* background-color: #c62938; */
 }
+
+#reset-button{
+    /* background-color: #26d98f; */
+    background-color: transparent;
+    box-shadow: 0 0 7px 1px #0CFFF4;
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    color: white;
+    font-size: 20px;
+    margin: 10px;
+
+ 
+}
+#reset-button:hover{
+    /* background-color: #26d98f; */
+    background-color: transparent;
+    box-shadow: 0 0 10px 10px #0CFFF4;
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    color: white;
+    font-size: 20px;
+    margin: 10px;
+
+ 
+}
+
 .second-block{
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 50%;
-    background-color: rgb(128, 124, 0);
+    /* background-color: rgb(128, 124, 0); */
 }
 
 .exit-button-container{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: blue;
+    /* background-color: blue; */
+    
+  
+
 
 }
+#exit-button{
+    box-shadow: 0 0 7px 1px #FF1493, 0 0 7px 1px #FF1493, 0 0 7px 1px #FF1493, 0 0 7px 1px #FF1493;
+background-color: transparent;
+border: #FF1493;
+font-family: "Poppins", sans-serif;
+font-weight: 600;
+font-style: normal;
+color: white;
+font-size: 20px;
+margin: 10px;
+
+}
+
+
+#exit-button:hover{
+    box-shadow: 0 0 10px 8px #FF1493, 0 0 7px 1px #FF1493, 0 0 7px 1px #FF1493, 0 0 7px 1px #FF1493;
+/* background-color: transparent;
+border: #FF1493;
+font-family: "Poppins", sans-serif;
+font-weight: 600;
+font-style: normal;
+color: white;
+font-size: 20px;
+margin: 10px; */
+
+}
+
 .usher{
     width: 100%;
     height: 500px;
@@ -286,9 +346,14 @@ background-color: aqua;
     font-family: "Press Start 2P", system-ui;
     font-weight: 400;
     font-style: normal;
+    color: rgb(66, 64, 64);
 /* color: white; */
 
   }
   .cellButton:hover{
     background-color: rgba(255, 183, 244, 0.8);
   }
+
+
+  /* ESTIOS 80´S  */
+  
