--- a/src/styles/human-machine.css
+++ b/src/styles/human-machine.css
@@ -42,12 +42,15 @@ body{
 
 }
 header{
+    margin-top: 12px;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 40px;
-    background-color: red;
+    height: 50px;
+    /* background-color: red; */
+    color: red;
+    font-size: 30px;
 
 }
 
@@ -254,9 +257,10 @@ margin: 1px;
 }
 .game {
     display: grid;
-
+justify-content: center;
+align-items: center;
     grid-template-columns: auto auto auto;
-  /* background-color: blue; */
+  background-color: #1f3679;
   width: 450px;
   height: 450px;
   padding: 10px;
@@ -269,10 +273,10 @@ margin: 1px;
     align-items: center;
     width: 150px;
     height: 150px;
-    background-color: rgba(255, 255, 255, 0.8);
-    border: 1px solid rgba(0, 0, 0, 0.8);
+    background-color: black;
+    /* border: 1px solid rgba(208, 163, 163, 0.8); */
     padding: 20px;
-    font-size: 30px;
+    font-size: 60px;
     text-align: center;
     display: flex;
     justify-content: center;
@@ -280,11 +284,11 @@ margin: 1px;
     width: 153px;
     height: 150px;
 
-    border: 1px solid rgba(0, 0, 0, 0.8);
+    border: 1px solid  #1f3679 ;
     padding: 20px;
     font-size: 30px;
     text-align: center;
-    color: white;
+    color: rgb(255, 255, 255);
           /* FUENTE DE GOOGLE */
           font-family: "Roboto", sans-serif;
           font-weight: 700;
@@ -292,3 +296,7 @@ margin: 1px;
           font-family: 'Stranger Things', sans-serif; 
   }
 
+/* 
+  ESTILOS DARKNESS */
+
+  
