--- a/src/styles/human-machine.css
+++ b/src/styles/human-machine.css
@@ -2,7 +2,6 @@
 *{
     margin: 0;
 }
-
 html {
     font-size: 62.5%;
 }
@@ -230,43 +229,68 @@ margin: 1px;
     align-items: center;
     width: 100%;
     height: 50%;
-    background-color: green;
+    /* background-color: green; */
 }
 
 .reset-button-container{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #c62938;
+    /* background-color: #c62938; */
 }
+
+#reset-button{
+    height: 35px;
+    color: white;
+    font-size: 10px;
+    margin: 10px;
+    font-family: "Poppins", sans-serif;
+    background-color: black;
+    font-weight: 600;
+    font-style: normal;
+    border-radius: 8px;
+} 
 .second-block{
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 50%;
-    background-color: rgb(128, 124, 0);
+    /* background-color: rgb(128, 124, 0); */
 }
 
 .exit-button-container{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: blue;
+    /* background-color: blue; */
 
+}
+#exit-button{
+    height: 35px;
+    color: white;
+    font-size: 10px;
+    margin: 10px;
+    font-family: "Poppins", sans-serif;
+    background-color: black;
+    font-weight: 600;
+    font-style: normal;
+    border-radius: 8px;
 }
 .game {
     display: grid;
 justify-content: center;
 align-items: center;
     grid-template-columns: auto auto auto;
-  background-color: #1f3679;
+  /* background-color: #1f3679; */
   width: 450px;
   height: 450px;
   padding: 10px;
 
   
   }
+
+
   .demoButtons{
     display: flex;
     justify-content: center;
