--- a/src/styles/human-machine.css
+++ b/src/styles/human-machine.css
@@ -220,6 +220,7 @@ margin: 1px;
         align-items: center;
         width: 100%;
         height: 50%;
+        color: white;
    
     }
     
@@ -256,6 +257,7 @@ margin: 1px;
     align-items: center;
     width: 100%;
     height: 50%;
+    color: white;
     /* background-color: rgb(128, 124, 0); */
 }
 
